--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -2,7 +2,7 @@
 shorthand = {H80},
 shortauthor={H},
 title={Design of permanent multipole magnets with oriented rare earth cobalt material},
-author={Klaus. Halbach},
+author= {Halbach, Klaus},
 journal={Nuclear Instruments and Methods},
 year={1980},
 volume={169},
@@ -14,9 +14,8 @@ url={https://api.semanticscholar.org/CorpusID:53486791}
 @ARTICLE{HH21,
 shorthand = {HH21},
 shortauthor={HH},
-title     = "Low-field magnetic resonance imaging: Its history and renaissance",
-author    = "Hori, Masaaki and Hagiwara, Akifumi and Goto, Masami and Wada,
-              Akihiko and Aoki, Shigeki",
+title     = {Low-field magnetic resonance imaging: Its history and renaissance},
+author    = {Hori, Masaaki and Hagiwara, Akifumi and Goto, Masami and Wada, Akihiko and Aoki, Shigeki},
 abstract  = "ABSTRACT: Low-field magnetic resonance imaging (MRI) systems
               have seen a renaissance recently due to improvements in
               technology (both hardware and software). Originally, the
@@ -45,7 +44,7 @@ language  = "en"
 @article{SB10,
 shorthand = {SB10},
 shortauthor={SB},
-author = {Soltner, H. and Blümler, P.},
+author = {Soltner, Helmut and Bluemler, Peter},
 title = {Dipolar Halbach magnet stacks made from identically shaped permanent magnets for magnetic resonance},
 journal = {Concepts in Magnetic Resonance Part A},
 volume = {36A},
@@ -62,7 +61,7 @@ year = {2010}
 @Article{WAH21,
 shorthand = {WAH21},
 shortauthor={WAH},
-author={Wenzel, Konstantin and Alhamwey, Hazem and O’Reilly, Tom and Riemann, Layla Tabea and Silemek, Berk and Winter, Lukas},   
+author= {Wenzel, Konstantin and Alhamwey, Hazem and O'Reilly, Tom and Riemann, Layla Tabea and Silemek, Berk and Winter, Lukas},
 title={B0-Shimming Methodology for Affordable and Compact Low-Field Magnetic Resonance Imaging Magnets},      
 journal={Frontiers in Physics},
 volume={9},          
@@ -70,7 +69,7 @@ year={2021},
 url={https://www.frontiersin.org/articles/10.3389/fphy.2021.704566}, 
 doi={10.3389/fphy.2021.704566},
 issn={2296-424X},
-abtract={Low-field (B<sub>0</sub> < 0.2 T) magnetic resonance imaging (MRI) is emerging as a low cost, point-of-care alternative to provide access to diagnostic imaging technology even in resource scarce environments. MRI magnets can be constructed based on permanent neodymium-iron-boron (NdFeB) magnets in discretized arrangements, leading to substantially lower mass and costs. A challenge with these designs is, however, a good B<sub>0</sub> field homogeneity, which is needed to produce high quality images free of distortions. In this work, we describe an iterative approach to build a low-field MR magnet based on a B<sub>0</sub>-shimming methodology using genetic algorithms. The methodology is tested by constructing a small bore (inner bore diameter = 130 mm) desktop MR magnet (<15 kg) at a field strength of B<sub>0</sub> = 0.1 T and a target volume of 4 cm in diameter. The configuration consists of a base magnet and shim inserts, which can be placed iteratively without modifying the base magnet assembly and without changing the inner dimensions of the bore or the outer dimensions of the MR magnet. Applying the shims, B<sub>0</sub> field inhomogeneity could be reduced by a factor 8 from 5,448 to 682 ppm in the target central slice of the magnet. Further improvements of these results can be achieved in a second or third iteration, using more sensitive magnetic field probes (e.g., nuclear magnetic resonance based magnetic field measurements). The presented methodology is scalable to bigger magnet designs. The MR magnet can be reproduced with off-the-shelf components and a 3D printer and no special tools are needed for construction. All design files and code to reproduce the results will be made available as open source hardware.}
+abtract={Low-field (B<sub>0</sub> < 0.2 T) magnetic resonance imaging (MRI) is emerging as a low cost, point-of-care alternative to provide access to diagnostic imaging technology even in resource scarce environments. MRI magnets can be constructed based on permanent neodymium-iron-boron (NdFeB) magnets in discretized arrangements, leading to substantially lower mass and costs. A challenge with these designs is, however, a good B<sub>0</sub> field homogeneity, which is needed to produce high quality images free of distortions. In this work, we describe an iterative approach to build a low-field MR magnet based on a B<sub>0</sub>-shimming methodology using genetic algorithms. The methodology is tested by constructing a small bore (inner bore diameter = 130 mm) desktop MR magnet (<15 kg) at a field strength of B<sub>0</sub> = 0.1 T and a target volume of 4 cm in diameter. The configuration consists of a base magnet and shim inserts, which can be placed iteratively without modifying the base magnet assembly and without changing the inner dimensions of the bore or the outer dimensions of the MR magnet. Applying the shims, B<sub>0</sub> field inhomogeneity could be reduced by a factor 8 from 5,448 to 682 ppm in the target central slice of the magnet. Further improvements of these results can be achieved in a second or third iteration, using more sensitive magnetic field probes (e.g., nuclear magnetic resonance based magnetic field measurements). The presented methodology is scalable to bigger magnet designs. The MR magnet can be reproduced with off-the-shelf components and a 3D printer and no special tools are needed for construction. All design files and code to reproduce the results will be made available as open source hardware.}
 }
 
 
@@ -84,7 +83,7 @@ url={http://dx.doi.org/10.1016/j.jmr.2020.106867},
 DOI={10.1016/j.jmr.2020.106867},
 journal={Journal of Magnetic Resonance},
 publisher={Elsevier BV},
-author={Wickenbrock, Arne and Zheng, Huijie and Chatzidrosos, Georgios and Shaji Rebeirro, Joseph and Schneemann, Tim and Blümler, Peter},
+author={Wickenbrock, Arne and Zheng, Huijie and Chatzidrosos, Georgios and Shaji Rebeirro, Joseph and Schneemann, Tim and Bluemler, Peter},
 year={2021},
 month=jan,
 pages={106867}
@@ -146,7 +145,7 @@ publisher={Elsevier}
 @misc{MWO24,
 shorthand = {MWO24},
 shortauthor={MWO},
-author = {Menküc, Benjamin and Winter, Lukas and O'Reilly Thomas},
+author = "Menkuec, Benjamin and Winter, Lukas and O'Reilly Thomas",
 title = {HalbachMRIDesigner - Create a Halbach MRI Magnet from parametric definitions},
 year = {01.01.2024},
 url = {https://github.com/menkueclab/HalbachMRIDesigner},
@@ -156,7 +155,7 @@ url = {https://github.com/menkueclab/HalbachMRIDesigner},
 @misc{O24,
 shorthand = {O24},
 shortauthor={O},
-author = {O'Reilly, Thomas},
+author = "O'Reilly, Thomas",
 title = {HalbachOptimisation - An implementation of a genetic algorithm to optimise the homogeneity of a Halbach array by varying the ring diameters along the length of the Halbach cylinder},
 year = {01.01.2024},
 url = {https://github.com/LUMC-LowFieldMRI/HalbachOptimisation},
@@ -182,7 +181,7 @@ doi = {10.11591/telkomnika.v11i9.3255}
 shorthand = {GKT16},
 shortauthor={GKT},
 title = {Globale Verwendungsstrukturen der Magnetwerkstoffe Neodym und Dysprosium: Eine szenariobasierte Analyse der Auswirkung der Diffusion der Elektromobilitaet auf den Bedarf an Seltenen Erden},
-author    = "GLOESER-CHAHOUD, Simon and  KUEHN, André and TERCERO ESPINOZA, Luis",
+author    = "GLOESER-CHAHOUD, Simon and  KUEHN, Andr{\'{e}} and TERCERO ESPINOZA, Luis",
 month     =  05,
 year      =  2016,
 language  = "de"
@@ -193,8 +192,7 @@ url = {https://www.isi.fraunhofer.de/content/dam/isi/dokumente/ccn/2016/KSE-Work
 @ARTICLE{OTW19,
 shorthand = {OTW19},
 shortauthor={OTW},
-title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
-              Halbach array magnet",
+title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore Halbach array magnet",
 author    = "O'Reilly, T and Teeuwisse, W M and Webb, A G",
 journal   = "J. Magn. Reson.",
 publisher = "Elsevier BV",
@@ -213,31 +211,30 @@ shorthand = {OTW21},
 shortauthor={OTW},
 title     = "In vivo {3D} brain and extremity {MRI} at 50 mT using a
               permanent magnet Halbach array",
-author    = "O'Reilly, Thomas and Teeuwisse, Wouter M and de Gans, Danny and
-              Koolstra, Kirsten and Webb, Andrew G",
-abstract  = "PurposeTo design a low‐cost, portable permanent magnet‐based MRI
+author    = {O'Reilly, Thomas and Teeuwisse, Wouter M and de Gans, Danny and Koolstra, Kirsten and Webb, Andrew G},
+abstract  = "PurposeTo design a low-cost, portable permanent magnet-based MRI
               system capable of obtaining in vivo MR images within a
               reasonable scan time.MethodsA discretized Halbach permanent
               magnet array with a clear bore diameter of 27 cm was designed
-              for operation at 50 mT. Custom‐built gradient coils, RF coil,
+              for operation at 50 mT. Custom-built gradient coils, RF coil,
               gradient amplifiers, and RF amplifier were integrated and tested
               on both phantoms and in vivo.ResultsPhantom results showed that
-              the gradient nonlinearity in the y‐direction and z‐direction was
-              less than 5\% over a 15‐cm FOV and did not need correcting. For
-              the x‐direction, it was significantly greater, but could be
-              partially corrected in postprocessing. Three‐dimensional in vivo
+              the gradient nonlinearity in the y-direction and z-direction was
+              less than 5\% over a 15-cm FOV and did not need correcting. For
+              the x-direction, it was significantly greater, but could be
+              partially corrected in postprocessing. Three-dimensional in vivo
               scans of the brain of a healthy volunteer using a turbo
-              spin‐echo sequence were acquired at a spatial resolution of 4
+              spin-echo sequence were acquired at a spatial resolution of 4
               $\times$ 4 $\times$ 4 mm in a time of about 2 minutes. The
-              T1‐weighted and T2‐weighted scans showed a good degree of tissue
+              T1-weighted and T2-weighted scans showed a good degree of tissue
               contrast. In addition, in vivo scans of the knee of a healthy
               volunteer were acquired at a spatial resolution of about 3
               $\times$ 2 $\times$ 2 mm within 12 minutes to show the
               applicability of the system to extremity imaging.ConclusionThis
-              work has shown that it is possible to construct a low‐field MRI
+              work has shown that it is possible to construct a low-field MRI
               unit with hardware components costing less than 10 000 Euros,
               which is able to acquire human images in vivo within a
-              reasonable data‐acquisition time. The system has a high degree
+              reasonable data-acquisition time. The system has a high degree
               of portability with magnet weight of approximately 75 kg,
               gradient and RF amplifiers each 15 kg, gradient coils 10 kg, and
               spectrometer 5 kg.",
@@ -257,7 +254,7 @@ language  = "en"
 shorthand = {NK16},
 shortauthor={NK},
 author="Nitz, Wolfgang R.",
-editor="Kramme, R{\"u}diger",
+editor="Kramme, Ruediger",
 title="Magnetresonanztomographie (MRT) -- Komponenten und Methoden",
 bookTitle="Medizintechnik: Verfahren - Systeme - Informationsverarbeitung",
 year="2016",
@@ -279,32 +276,31 @@ url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
 @ARTICLE{AFL23,
 shorthand = {AFL23},
 shortauthor={AFL},
-title     = "Low‐field {MRI}: Clinical promise and challenges",
-author    = "Arnold, Thomas Campbell and Freeman, Colbey W and Litt, Brian
-              and Stein, Joel M",
+title     = "Low-field {MRI}: Clinical promise and challenges",
+author    = {Arnold, Thomas Campbell and Freeman, Colbey W and Litt, Brian and Stein, Joel M},
 abstract  = "Modern MRI scanners have trended toward higher field strengths
               to maximize signal and resolution while minimizing scan time.
-              However, high‐field devices remain expensive to install and
-              operate, making them scarce outside of high‐income countries and
-              major population centers. Low‐field strength scanners have drawn
+              However, high-field devices remain expensive to install and
+              operate, making them scarce outside of high-income countries and
+              major population centers. Low-field strength scanners have drawn
               renewed academic, industry, and philanthropic interest due to
               advantages that could dramatically increase imaging access,
-              including lower cost and portability. Nevertheless, low‐field
+              including lower cost and portability. Nevertheless, low-field
               MRI still faces inherent limitations in image quality that come
               with decreased signal. In this article, we review advantages and
-              disadvantages of low‐field MRI scanners, describe hardware and
+              disadvantages of low-field MRI scanners, describe hardware and
               software innovations that accentuate advantages and mitigate
               disadvantages, and consider clinical applications for a new
-              generation of low‐field devices. In our review, we explore how
+              generation of low-field devices. In our review, we explore how
               these devices are being or could be used for high acuity brain
-              imaging, outpatient neuroimaging, MRI‐guided procedures,
+              imaging, outpatient neuroimaging, MRI-guided procedures,
               pediatric imaging, and musculoskeletal imaging. Challenges for
               their successful clinical translation include selecting and
               validating appropriate use cases, integrating with standards of
               care in high resource settings, expanding options with
               actionable information in low resource settings, and
               facilitating health care providers and clinical practice in new
-              ways. By embracing both the promise and challenges of low‐field
+              ways. By embracing both the promise and challenges of low-field
               MRI, clinicians and researchers have an opportunity to transform
               medical care for patients around the world.Level of
               Evidence5Technical EfficacyStage 6",
@@ -323,7 +319,7 @@ language  = "en"
 @book{BC16,
 shorthand = {BC16},
 shortauthor={BC},
-author = {Blümler, Peter and Casanova, Federico},
+author = {Bluemler, Peter and Casanova, Federico},
 year = {2016},
 month = {01},
 pages = {133-157},
@@ -336,9 +332,8 @@ doi = {10.1039/9781782628095-00133}
 @ARTICLE{DRW23,
 shorthand = {DRW23},
 shortauthor={DRW},
-title     = "An integrated target field framework for point-of-care halbach
-              array low-field {MRI} system design",
-author    = "de Vos, Bart and Remis, Rob F and Webb, Andrew G",
+title     = "An integrated target field framework for point-of-care halbach array low-field {MRI} system design",
+author    = {de Vos, Bart and Remis, Rob F and Webb, Andrew G},
 abstract  = "AbstractObjectiveLow-cost low-field point-of-care MRI systems
               are used in many different applications. System design has
               correspondingly different requirements in terms of imaging
@@ -420,7 +415,7 @@ year={2017},
 month={Feb},
 day={25},
 pages={87-100},
-abstract={In an earlier chapter, we explored nose, which is an advanced and better framework for Python testing. Unfortunately, nose has not been under active development for the past several years. That makes it an unsuitable candidate for a test framework when you want to choose something for a long-term project. Moreover, there are many projects that use unittest or nose or a combination of both. You definitely need a framework that has more features than unittest, and unlike nose, it should be under active development. nose2 is more of a test-runner for unittest and an almost defunct tool. You need a unit test framework that's capable of discovering and running tests written in unittest and nose. It should be advanced and must be under active development. The answer is pytest.},
+abstract={In an earlier chapter, we explored nose, which is an advanced and better framework for Python testing. Unfortunately, nose has not been under active development for the past several years. That makes it an unsuitable candidate for a test framework when you want to choose something for a long-term project. Moreover, there are many projects that use unittest or nose or a combination of both. You definitely need a framework that has more features than unittest, and unlike nose, it should be under active development. nose2 is more of a test-runner for unittest and an almost defunct tool. You need a unit test framework thats capable of discovering and running tests written in unittest and nose. It should be advanced and must be under active development. The answer is pytest.},
 isbn={978-1-4842-2676-6},
 doi={10.1007/978-1-4842-2677-3_5},
 url={https://doi.org/10.1007/978-1-4842-2677-3_5}
@@ -430,11 +425,9 @@ url={https://doi.org/10.1007/978-1-4842-2677-3_5}
 @Book{W19,
 shorthand = {W19},
 shortauthor={W},
-author={Wimmer, Raphael
-and Schmid, Andreas
-and Bockes, Florian},
+author={Wimmer, Raphael and Schmid, Andreas and Bockes, Florian},
 title={On the Latency of USB-Connected Input Devices},
-series={CHI '19: Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
+series={CHI 19: Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
 year={2019},
 month={Apr},
 day={18},
@@ -448,10 +441,9 @@ url={https://doi.org/10.1145/3290605.3300650}
 @ARTICLE{BPA22,
   shorthand = {BPA22},
   shortauthor={BPA},
-  title     = "Improving brain {B0} shimming using an easy and accessible
-               multi-coil shim array at ultra-high field",
-  author    = "Boer, Vincent Oltman and Pedersen, Jan Ole and Arango, Nick and
-               Kuang, Irene and Stockmann, Jason and Petersen, Esben Thade",
+  title     = {Improving brain {B0} shimming using an easy and accessible multi-coil shim array at ultra-high field},
+  author    = {Boer, Vincent Oltman and Pedersen, Jan Ole and Arango, Nick and
+               Kuang, Irene and Stockmann, Jason and Petersen, Esben Thade},
   abstract  = "Abstract Object Improve shimming capabilities of ultra-high
                field systems, with addition of an accessible low-complexity B0
                shim array for head MRI at 7 T. Materials and methods An eight
