--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -439,40 +439,68 @@ url={https://doi.org/10.1145/3290605.3300650}
 }
 
 @ARTICLE{BPA22,
-  shorthand = {BPA22},
-  shortauthor={BPA},
-  title     = {Improving brain {B0} shimming using an easy and accessible multi-coil shim array at ultra-high field},
-  author    = {Boer, Vincent Oltman and Pedersen, Jan Ole and Arango, Nick and
-               Kuang, Irene and Stockmann, Jason and Petersen, Esben Thade},
-  abstract  = "Abstract Object Improve shimming capabilities of ultra-high
-               field systems, with addition of an accessible low-complexity B0
-               shim array for head MRI at 7 T. Materials and methods An eight
-               channel B0 shim coil array was designed as a tradeoff between
-               shimming improvement and construction complexity, to provide an
-               easy to use shim array that can be employed with the standard 7
-               T head coil. The array was interfaced using an open-source
-               eight-channel shim amplifier rack. Improvements in field
-               homogeneity for whole-brain and slice-based shimming were
-               compared to standard second-order shimming, and to more complex
-               higher order dynamic shimming and shim arrays with 32 and 48
-               channels. Results The eight-channel shim array provided 12\%
-               improvement in whole brain static shimming and provided 33\%
-               improvement when using slice-based shimming. With this, the
-               eight-channel array performed similar to third-order dynamic
-               shimming (without the need for higher order eddy current
-               compensation). More complex shim arrays with 32 and 48 channels
-               performed better, but require a dedicated RF coil. Discussion
-               The designed eight-channel shim array provides a low-complexity
-               and low-cost approach for improving B0 field shimming on an
-               ultra-high field system. In both static and dynamic shimming, it
-               provides improved B0 homogeneity over standard shimming.",
-  journal   = "MAGMA",
-  publisher = "Springer Science and Business Media LLC",
-  volume    =  35,
-  number    =  6,
-  pages     = "943--951",
-  month     =  may,
-  year      =  2022,
-  copyright = "https://creativecommons.org/licenses/by/4.0",
-  language  = "en"
+shorthand = {BPA22},
+shortauthor={BPA},
+title     = {Improving brain {B0} shimming using an easy and accessible multi-coil shim array at ultra-high field},
+author    = {Boer, Vincent Oltman and Pedersen, Jan Ole and Arango, Nick and
+              Kuang, Irene and Stockmann, Jason and Petersen, Esben Thade},
+abstract  = "Abstract Object Improve shimming capabilities of ultra-high
+              field systems, with addition of an accessible low-complexity B0
+              shim array for head MRI at 7 T. Materials and methods An eight
+              channel B0 shim coil array was designed as a tradeoff between
+              shimming improvement and construction complexity, to provide an
+              easy to use shim array that can be employed with the standard 7
+              T head coil. The array was interfaced using an open-source
+              eight-channel shim amplifier rack. Improvements in field
+              homogeneity for whole-brain and slice-based shimming were
+              compared to standard second-order shimming, and to more complex
+              higher order dynamic shimming and shim arrays with 32 and 48
+              channels. Results The eight-channel shim array provided 12\%
+              improvement in whole brain static shimming and provided 33\%
+              improvement when using slice-based shimming. With this, the
+              eight-channel array performed similar to third-order dynamic
+              shimming (without the need for higher order eddy current
+              compensation). More complex shim arrays with 32 and 48 channels
+              performed better, but require a dedicated RF coil. Discussion
+              The designed eight-channel shim array provides a low-complexity
+              and low-cost approach for improving B0 field shimming on an
+              ultra-high field system. In both static and dynamic shimming, it
+              provides improved B0 homogeneity over standard shimming.",
+journal   = "MAGMA",
+publisher = "Springer Science and Business Media LLC",
+volume    =  35,
+number    =  6,
+pages     = "943--951",
+month     =  may,
+year      =  2022,
+copyright = "https://creativecommons.org/licenses/by/4.0",
+language  = "en"
+}
+
+
+@Article{DBN08,
+shorthand = {DBN08},
+shortauthor={DBN},
+author={De Zanche, Nicola and Barmet, Christoph and Nordmeyer-Massner, Jurek and Pruessmann, Klaas},
+title={NMR Probes for measuring magnetic fields and field dynamics in MR systems},
+journal={Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+year={2008},
+month={Jul},
+day={01},
+volume={60},
+pages={176-86},
+abstract={High-resolution magnetic field probes based on pulsed liquid-state NMR are presented. Static field measurements with an error of 10 nanotesla or less at 3 tesla are readily obtained in 100 ms. The further ability to measure dynamic magnetic fields results from using small ( approximately 1 microL) droplets of MR-active liquid surrounded by susceptibility-matched materials. The consequent high field homogeneity allows free induction decay signals lasting 100 ms or more to be readily achieved. The small droplet dimensions allow the magnetic field to be measured even in the presence of large gradients. Highly sensitive detection yields sufficient SNR to follow the relevant field evolution without signal averaging and at bandwidths up to hundreds of kHz. Transient, nonreproducible effects and drifts are thus readily monitored. The typical application of k-space trajectory mapping has been demonstrated. Potential further applications include characterization, tuning, and maintenance of gradient systems as well as the mapping of the static field distribution of MRI magnets. Connection of the probes to a standard MR spectrometer is similar to that used for imaging coils.},
+doi={10.1002/mrm.21624},
+url={https://doi.org/10.1002/mrm.21624}
+}
+
+@article{CP16,
+shorthand = {CP16},
+shortauthor={CP},
+title={Model-based characterization of permanent magnets with a 3D Hall-Sensor array},
+author={Cichon, Daniel and Psiuk, Rafael},
+journal={2016 6th International Electric Drives Production Conference (EDPC)},
+year={2016},
+pages={238-243},
+url={https://api.semanticscholar.org/CorpusID:44196402}
 }
