--- a/documentation/thesis/thesis_references_alias.tex
+++ b/documentation/thesis/thesis_references_alias.tex
@@ -1,37 +1,4 @@
-\defcitealias{O24}{O24}
-
-
-\defcitealias{WZC21}{WZC21}
-
-
-\defcitealias{AFL23}{AFL23}
-
-
-\defcitealias{BC16}{BC16}
-
-
-\defcitealias{WAH21}{WAH21}
-
-
-\defcitealias{OTW19}{OTW19}
-
-
-\defcitealias{H80}{H80}
-
-
 \defcitealias{W19}{W19}
-
-
-\defcitealias{OB20}{OB20}
-
-
-\defcitealias{DRW23}{DRW23}
-
-
-\defcitealias{P17}{P17}
-
-
-\defcitealias{OTW21}{OTW21}
 
 
 \defcitealias{GKT16}{GKT16}
@@ -40,23 +7,62 @@
 \defcitealias{G17}{G17}
 
 
-\defcitealias{HH21}{HH21}
+\defcitealias{OTW21}{OTW21}
+
+
+\defcitealias{DRW23}{DRW23}
 
 
 \defcitealias{BPA22}{BPA22}
 
 
-\defcitealias{HMW20}{HMW20}
+\defcitealias{OTW19}{OTW19}
 
 
 \defcitealias{MWO24}{MWO24}
 
 
-\defcitealias{MMN19}{MMN19}
+\defcitealias{AFL23}{AFL23}
+
+
+\defcitealias{WZC21}{WZC21}
+
+
+\defcitealias{O24}{O24}
 
 
 \defcitealias{SB10}{SB10}
 
 
+\defcitealias{CP16}{CP16}
+
+
+\defcitealias{HH21}{HH21}
+
+
+\defcitealias{WAH21}{WAH21}
+
+
+\defcitealias{HMW20}{HMW20}
+
+
+\defcitealias{MMN19}{MMN19}
+
+
+\defcitealias{DBN08}{DBN08}
+
+
 \defcitealias{NK16}{NK16}
+
+
+\defcitealias{H80}{H80}
+
+
+\defcitealias{OB20}{OB20}
+
+
+\defcitealias{BC16}{BC16}
+
+
+\defcitealias{P17}{P17}
 
